# flow.yaml

appId: com.stewartarmbrecht.myapp.dev
---
- tapOn:
    id: "authenticator__text-field__input-username"
- inputText: "stewbbb"
- tapOn:
    id: "authenticator__text-field__input-password"
- inputText: "QcI814u2"
- tapOn:
    text: "Sign in"
    index: 1
- tapOn: "Settings"
- tapOn: "Sign Out"
